force-app/main/default/objects/Chart__c/fields/Hair_Restoration_consult_Next_App__c.field-meta.xml
<CustomField>
    <fullName>Hair_Restoration_consult_Next_App__c</fullName>
    <label>Hair Restoration consult Next App</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>