force-app/main/default/objects/Chart__c/fields/Hair_Restoration_Cosmetic_Number__c.field-meta.xml
<CustomField>
    <fullName>Hair_Restoration_Cosmetic_Number__c</fullName>
    <label>Hair Restoration Cosmetic Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>in 1</fullName>
            </value>
            <value>
                <fullName>in 2</fullName>
            </value>
            <value>
                <fullName>in 3</fullName>
            </value>
            <value>
                <fullName>in 4</fullName>
            </value>
            <value>
                <fullName>in 5</fullName>
            </value>
            <value>
                <fullName>in 6</fullName>
            </value>
            <value>
                <fullName>in 7</fullName>
            </value>
            <value>
                <fullName>in 8</fullName>
            </value>
            <value>
                <fullName>in 9</fullName>
            </value>
            <value>
                <fullName>in 10</fullName>
            </value>
            <value>
                <fullName>in 11</fullName>
            </value>
            <value>
                <fullName>in 12</fullName>
            </value>
            <value>
                <fullName>in 1-2</fullName>
            </value>
            <value>
                <fullName>in 2-3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>