force-app/main/default/objects/Chart__c/fields/Have_A_History_Of_Over_EyeBrow_Plucking__c.field-meta.xml
<CustomField>
    <fullName>Have_A_History_Of_Over_EyeBrow_Plucking__c</fullName>
    <label>Have A History Of Over EyeBrow Plucking?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>