force-app/main/default/objects/Chart__c/fields/History_Asthma__c.field-meta.xml
<CustomField>
    <fullName>History_Asthma__c</fullName>
    <label>History Of Asthma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>