force-app/main/default/objects/Chart__c/fields/History_Autoimmune_Disorders__c.field-meta.xml
<CustomField>
    <fullName>History_Autoimmune_Disorders__c</fullName>
    <label>History Of Autoimmune Disorders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>