force-app/main/default/objects/Chart__c/fields/History_Dessicated_Thyroid__c.field-meta.xml
<CustomField>
    <fullName>History_Dessicated_Thyroid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hormone treatment history Dessicated Thyroid</description>
    <label>History Dessicated Thyroid</label>
    <type>Checkbox</type>
</CustomField>