force-app/main/default/objects/Chart__c/fields/History_DessicatedThyroid__c.field-meta.xml
<CustomField>
    <fullName>History_DessicatedThyroid__c</fullName>
    <description>Hormone treatment history Desiccated Thyroid</description>
    <label>History Dessicated Thyroid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>