force-app/main/default/objects/Chart__c/fields/History_Medical_Weight_Loss__c.field-meta.xml
<CustomField>
    <fullName>History_Medical_Weight_Loss__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hormone treatment history Medical Weight Loss</description>
    <label>History Medical Weight Loss</label>
    <type>Checkbox</type>
</CustomField>