force-app/main/default/objects/Chart__c/fields/History_MedicalWeight_Loss__c.field-meta.xml
<CustomField>
    <fullName>History_MedicalWeight_Loss__c</fullName>
    <description>Hormone treatment history Medical Weight Loss</description>
    <label>History Medical Weight Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>