force-app/main/default/objects/Chart__c/fields/History_Numbness_in_the_area__c.field-meta.xml
<CustomField>
    <fullName>History_Numbness_in_the_area__c</fullName>
    <label>History Numbness in the area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>