force-app/main/default/objects/Chart__c/fields/History_Of_Botox_Restylane_Dermal_Filler__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Botox_Restylane_Dermal_Filler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Botox/Restylane/Dermal Filler</label>
    <type>Checkbox</type>
</CustomField>