force-app/main/default/objects/Chart__c/fields/History_Of_Cancer_precancerous_lesions__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Cancer_precancerous_lesions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Cancer/ precancerous lesions</label>
    <type>Checkbox</type>
</CustomField>