force-app/main/default/objects/Chart__c/fields/History_Of_Multiple_Sclerosis__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Multiple_Sclerosis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Multiple Sclerosis</label>
    <type>Checkbox</type>
</CustomField>