force-app/main/default/objects/Chart__c/fields/History_Of_Over_the_counter_medications__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Over_the_counter_medications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Over the counter medications</label>
    <type>Checkbox</type>
</CustomField>