force-app/main/default/objects/Chart__c/fields/History_Of_Sarcoidosis__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Sarcoidosis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Sarcoidosis</label>
    <type>Checkbox</type>
</CustomField>