force-app/main/default/objects/Chart__c/fields/History_Of_Scleroderma__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Scleroderma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Scleroderma</label>
    <type>Checkbox</type>
</CustomField>