force-app/main/default/objects/Chart__c/fields/History_Of_Seizures_Epilepsy__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Seizures_Epilepsy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Seizures/Epilepsy</label>
    <type>Checkbox</type>
</CustomField>