force-app/main/default/objects/Chart__c/fields/History_Of_Skin_Disorders__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Skin_Disorders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Skin Disorders</label>
    <type>Checkbox</type>
</CustomField>