force-app/main/default/objects/Chart__c/fields/History_of_trauma_to_the_eyebrows__c.field-meta.xml
<CustomField>
    <fullName>History_of_trauma_to_the_eyebrows__c</fullName>
    <label>History of trauma to the eyebrows?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>