force-app/main/default/objects/Chart__c/fields/History_OfLatex_Allergies__c.field-meta.xml
<CustomField>
    <fullName>History_OfLatex_Allergies__c</fullName>
    <label>History Of Latex Allergies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>