force-app/main/default/objects/Chart__c/fields/History_Sarcoidosis__c.field-meta.xml
<CustomField>
    <fullName>History_Sarcoidosis__c</fullName>
    <label>History Of Sarcoidosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>