force-app/main/default/objects/Chart__c/fields/History_Seizures_Epilepsy__c.field-meta.xml
<CustomField>
    <fullName>History_Seizures_Epilepsy__c</fullName>
    <label>History Of Seizures/Epilepsy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>