force-app/main/default/objects/Chart__c/fields/HistoryOf_Accutane__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Accutane__c</fullName>
    <label>History Of Accutane</label>
    <length>255</length>
    <type>Text</type>
</CustomField>