force-app/main/default/objects/Chart__c/fields/HistoryOf_Acne_Medication__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Acne_Medication__c</fullName>
    <label>History Of Acne Medication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>