force-app/main/default/objects/Chart__c/fields/HistoryOf_Antibiotics__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Antibiotics__c</fullName>
    <label>History Of Antibiotics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>