force-app/main/default/objects/Chart__c/fields/HistoryOf_Blood_Thinner__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Blood_Thinner__c</fullName>
    <label>History Of Blood Thinner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>