force-app/main/default/objects/Chart__c/fields/HistoryOf_Botox_Restylane_Dermal_Filler__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Botox_Restylane_Dermal_Filler__c</fullName>
    <label>History Of Botox/Restylane/Dermal Filler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>