force-app/main/default/objects/Chart__c/fields/HistoryOf_Cancer_precancerous_lesions__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Cancer_precancerous_lesions__c</fullName>
    <label>History Of Cancer/ precancerous lesions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>