force-app/main/default/objects/Chart__c/fields/HistoryOf_Currently_Breastfeeding__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Currently_Breastfeeding__c</fullName>
    <label>History Of Currently Breastfeeding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>