force-app/main/default/objects/Chart__c/fields/HistoryOf_Food_Allergies__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Food_Allergies__c</fullName>
    <label>History Of Food Allergies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>