force-app/main/default/objects/Chart__c/fields/HistoryOf_Internal_Metal_Devices__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Internal_Metal_Devices__c</fullName>
    <label>History Of Internal Metal Devices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>