force-app/main/default/objects/Chart__c/fields/HistoryOf_Lymphedemia__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Lymphedemia__c</fullName>
    <label>History Of Lymphedemia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>