force-app/main/default/objects/Chart__c/fields/HistoryOf_Multiple_Sclerosis__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Multiple_Sclerosis__c</fullName>
    <label>History Of Multiple Sclerosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>