force-app/main/default/objects/Chart__c/fields/HistoryOf_Oral_Contraceptives__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Oral_Contraceptives__c</fullName>
    <label>History Of Oral Contraceptives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>