force-app/main/default/objects/Chart__c/fields/HistoryOf_Over_the_counter_medications__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Over_the_counter_medications__c</fullName>
    <label>History Of Over the counter medications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>