force-app/main/default/objects/Chart__c/fields/HistoryOf_Past_Surgeries__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Past_Surgeries__c</fullName>
    <label>History Of Past Surgeries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>