force-app/main/default/objects/Chart__c/fields/HistoryOf_Polycystic_Ovarian_Syndrome__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Polycystic_Ovarian_Syndrome__c</fullName>
    <label>History Of Polycystic Ovarian Syndrome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>