force-app/main/default/objects/Chart__c/fields/HistoryOf_pregnant__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_pregnant__c</fullName>
    <label>History Of pregnant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>