force-app/main/default/objects/Chart__c/fields/HistoryOf_Present_Scarring__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Present_Scarring__c</fullName>
    <label>History Of Present Scarring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>