force-app/main/default/objects/Chart__c/fields/HistoryOf_Recent_Cosmetic_Procedures__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Recent_Cosmetic_Procedures__c</fullName>
    <label>History Of Recent Cosmetic Procedures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>