force-app/main/default/objects/Chart__c/fields/HistoryOf_Retin_A_or_Generics__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Retin_A_or_Generics__c</fullName>
    <label>History Of Retin-A or Generics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>