force-app/main/default/objects/Chart__c/fields/HistoryOf_Scleroderma__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Scleroderma__c</fullName>
    <label>History Of Scleroderma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>