force-app/main/default/objects/Chart__c/fields/HistoryOf_Tattoos__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Tattoos__c</fullName>
    <label>History Of Tattoos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>