force-app/main/default/objects/Chart__c/fields/HistoryOf_Varicose_Veins__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Varicose_Veins__c</fullName>
    <label>History Of Varicose Veins</label>
    <length>255</length>
    <type>Text</type>
</CustomField>