force-app/main/default/objects/Chart__c/fields/HistoryOf_Vitiligo__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Vitiligo__c</fullName>
    <label>History Of Vitiligo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>