force-app/main/default/objects/Chart__c/fields/Hormone_25_Hydroxyvitamin_D__c.field-meta.xml
<CustomField>
    <fullName>Hormone_25_Hydroxyvitamin_D__c</fullName>
    <label>Hormone 25-Hydroxyvitamin D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>