force-app/main/default/objects/Chart__c/fields/Hormone_Assessment_Andropause__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Assessment_Andropause__c</fullName>
    <label>Hormone Assessment Andropause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>