force-app/main/default/objects/Chart__c/fields/Hormone_Assessment_Menopause__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Assessment_Menopause__c</fullName>
    <label>Hormone Assessment Menopause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>