force-app/main/default/objects/Chart__c/fields/Hormone_Assessment_Sleep_Disorder__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Assessment_Sleep_Disorder__c</fullName>
    <label>Hormone Assessment Sleep Disorder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>