force-app/main/default/objects/Chart__c/fields/Hormone_DHEA_S__c.field-meta.xml
<CustomField>
    <fullName>Hormone_DHEA_S__c</fullName>
    <label>Hormone DHEA-S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>