force-app/main/default/objects/Chart__c/fields/Hormone_Plan_Ace_Inhibitor__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Ace_Inhibitor__c</fullName>
    <label>Hormone Plan Ace Inhibitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>