force-app/main/default/objects/Chart__c/fields/Hormone_Plan_Aged_Garlic__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Aged_Garlic__c</fullName>
    <label>Hormone Plan Aged Garlic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>