force-app/main/default/objects/Chart__c/fields/Hormone_Plan_CoQ10__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_CoQ10__c</fullName>
    <label>Hormone Plan CoQ10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>