force-app/main/default/objects/Chart__c/fields/Hormone_Plan_DHEA__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_DHEA__c</fullName>
    <label>Hormone Plan DHEA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>