force-app/main/default/objects/Chart__c/fields/Hormone_Plan_DIM__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_DIM__c</fullName>
    <label>Hormone Plan DIM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>