force-app/main/default/objects/Chart__c/fields/Hormone_Plan_Estradiol_patch__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Estradiol_patch__c</fullName>
    <label>Hormone Plan Estradiol - patch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>