force-app/main/default/objects/Chart__c/fields/Hormone_Plan_Estradiol_pellet__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Estradiol_pellet__c</fullName>
    <label>Hormone Plan Estradiol - pellet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>