force-app/main/default/objects/Chart__c/fields/Hormone_Plan_Fish_oil__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Fish_oil__c</fullName>
    <label>Hormone Plan Fish oil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>