force-app/main/default/objects/Chart__c/fields/Hormone_Plan_lodine__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_lodine__c</fullName>
    <label>Hormone Plan lodine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>