force-app/main/default/objects/Chart__c/fields/Hormone_Plan_Other__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Other__c</fullName>
    <label>Hormone Plan Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>