force-app/main/default/objects/Chart__c/fields/Hormone_Plan_Progesterone_oral__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Progesterone_oral__c</fullName>
    <label>Hormone Plan Progesterone - oral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>